--- a/src/Matcher.Api/Matcher.Api.csproj
+++ b/src/Matcher.Api/Matcher.Api.csproj
@@ -7,7 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Matcher.Business\Matcher.Business.csproj" />
+      <ProjectReference Include="..\Matcher.Data\Matcher.Data.csproj" />
     </ItemGroup>
 
 </Project>
