feat: RedisCacheService implementation using StackExchange.Redis

--- a/src/Matcher.Api/appsettings.Development.json
+++ b/src/Matcher.Api/appsettings.Development.json
@@ -6,6 +6,10 @@
     "User": "postgres",
     "Password": "pass123"
   },
+  "Redis": {
+    "EndPoint": "localhost:6379",
+    "Password": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
