fix: regenerate migrations and csv datasets

--- a/src/Matcher.Api/appsettings.Development.json
+++ b/src/Matcher.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Redis": {
     "EndPoint": "localhost:6379",
-    "Password": ""
+    "Password": "password"
   },
   "Logging": {
     "LogLevel": {
