--- a/src/Matcher.Data/Matcher.Data.csproj
+++ b/src/Matcher.Data/Matcher.Data.csproj
@@ -23,5 +23,10 @@
     <ItemGroup>
         <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
     
 </Project>
